chore: remove maven-surefire-plugin